--- a/index.html
+++ b/index.html
@@ -4,12 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clock</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="wrapper">
         <div class="container">
             
+            <div class="clock">
+                <div class="bg">
+                    <div id="hour"></div>
+                </div>
+            </div>
+
+            <div class="clock">
+                <div class="bg">
+                    <div id="minute"></div>
+                </div>
+            </div>
+
+            <div class="clock">
+                <div class="bg">
+                    <div id="second"></div>
+                </div>
+            </div>
+
+            <div class="clock">
+                <div class="bg">
+                    <div id="ampm"></div>
+                </div>
+            </div>
+
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
